force-app/main/default/objects/Geo_Targeting__c/Geo_Targeting__c.object-meta.xml
<CustomObject>
    <label>Geo Targeting (old)</label>
    <nameField>
        <label>Geo Targeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Targetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>