force-app/main/default/objects/Geo_Targeting__c/fields/Campaign_City__c.field-meta.xml
<CustomField>
    <fullName>Campaign_City__c</fullName>
    <label>Campaign City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>