force-app/main/default/objects/Geo_Targeting__c/fields/Campaign_Country__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Country__c</fullName>
    <label>Campaign Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeting_Campaign_Country</valueSetName>
    </valueSet>
</CustomField>