force-app/main/default/objects/Geo_Targeting__c/fields/Campaign_DMA__c.field-meta.xml
<CustomField>
    <fullName>Campaign_DMA__c</fullName>
    <label>Campaign DMA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeting_Campaign_DMA</valueSetName>
    </valueSet>
</CustomField>