force-app/main/default/objects/Geo_Targeting__c/fields/Campaign_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Zip_Code__c</fullName>
    <label>Campaign Zip Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>